# Cortexia

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
cortexia/: __init__.py  cli.py  config.py  main.py
cortexia/api/: __init__.py  deps.py  upload_utils.py
cortexia/api/routes/: analytics.py  clusters.py  events.py  forensics.py  health.py  identities.py  recognize.py  streams.py
cortexia/api/schemas/: models.py
cortexia/core/: __init__.py  clusterer.py  detector.py  embedder.py  recognizer.py  tracker.py  trust_pipeline.py  types.py
cortexia/core/models/: __init__.py  antispoof.py  attributes.py
cortexia/db/: __init__.py  models.py  session.py
cortexia/db/migrations/: env.py
cortexia/db/migrations/versions/: 001_initial.py
cortexia/db/repositories/: event_repo.py  identity_repo.py  vector_repo.py
cortexia/services/: __init__.py
cortexia/utils/: __init__.py  logging.py
cortexia/workers/: __init__.py  tasks.py
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
dashboard/src/components/ui/: badge.tsx
dashboard/src/lib/: api.ts  store.ts
dashboard/src/pages/: Analytics.tsx  Clusters.tsx  Events.tsx  Forensics.tsx  Identities.tsx  LiveFeed.tsx  Settings.tsx
deploy/: 01-ssh-harden.sh  02-firewall.sh  03-fail2ban.sh  04-crowdsec.sh  05-auto-updates.sh  06-kernel-harden.sh  backup.sh  health-monitor.sh  setup-vps.sh
docker/: Dockerfile.api  Dockerfile.dashboard  Dockerfile.worker  nginx-dashboard.conf  nginx.conf
docs/: architecture.md
scripts/: generate-certs.sh  seed_data.py  setup_models.py
tests/: conftest.py
tests/integration/: __init__.py  test_api.py  test_schemas.py
tests/unit/: test_antispoof.py  test_clusterer.py  test_config.py  test_recognizer.py  test_tracker.py  test_types.py
